[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "intellectronics"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Intellectronics"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["intellectronics"]

dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
intellectronics = "intellectronics.cli:run"

[project.urls]
"Homepage" = "https://github.com/org_name/intellectronics"
"Bug Tracker" = "https://github.com/org_name/intellectronics/issues"